--- a/profile.html
+++ b/profile.html
@@ -22,9 +22,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="img.jfif	" style="width:90%" alt="GR">
+          <img src="https://media.licdn.com/dms/image/C5103AQFmjE_AegFEWQ/profile-displa
+		    yphoto-shrink_200_200/0?e=1551312000&v=beta&t=JBwnOoo_s30_m0T-rzyhwOmMoDrdu9VzvKb748u9SGA	" style="width:90%" alt="GR">
           <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2 style="font: bolder">Gurunath Reddy</h2>
+            <h1 style="font: bold">Gurunath Reddy</h1>
           </div>
         </div>
         <div class="w3-container">
